--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,4 +1,4 @@
-name: run-notebook 
+name: Run Notebooks 
 
 on:
   workflow_dispatch:
@@ -19,7 +19,7 @@ jobs:
         RUNNER: ${{ toJson(runner) }}
         SECRETS: ${{ toJson(secrets) }}
         GITHUB: ${{ toJson(github) }}
-        LAL: ${{ secrets.LAL }}
+        ACCESS_DATA: ${{ secrets.ACCESS_DATA }}
       with:
         notebook: "notebooks/homepage.ipynb"
         isReport: False
@@ -29,7 +29,7 @@ jobs:
         RUNNER: ${{ toJson(runner) }}
         SECRETS: ${{ toJson(secrets) }}
         GITHUB: ${{ toJson(github) }}
-        LAL: ${{ secrets.LAL }}
+        ACCESS_DATA: ${{ secrets.ACCESS_DATA }}
       with:
         notebook: "notebooks/people.ipynb"
         isReport: False
@@ -39,7 +39,7 @@ jobs:
         RUNNER: ${{ toJson(runner) }}
         SECRETS: ${{ toJson(secrets) }}
         GITHUB: ${{ toJson(github) }}
-        LAL: ${{ secrets.LAL }}
+        ACCESS_DATA: ${{ secrets.ACCESS_DATA }}
       with:
         notebook: "notebooks/individual_person_pages.ipynb"
         isReport: False
@@ -49,7 +49,7 @@ jobs:
         RUNNER: ${{ toJson(runner) }}
         SECRETS: ${{ toJson(secrets) }}
         GITHUB: ${{ toJson(github) }}
-        LAL: ${{ secrets.LAL }}
+        ACCESS_DATA: ${{ secrets.ACCESS_DATA }}
       with:
         notebook: "notebooks/individual_research_pages.ipynb"
         isReport: False
@@ -59,7 +59,7 @@ jobs:
         RUNNER: ${{ toJson(runner) }}
         SECRETS: ${{ toJson(secrets) }}
         GITHUB: ${{ toJson(github) }}
-        LAL: ${{ secrets.LAL }}
+        ACCESS_DATA: ${{ secrets.ACCESS_DATA }}
       with:
         notebook: "notebooks/research.ipynb"
         isReport: False
@@ -69,7 +69,7 @@ jobs:
         RUNNER: ${{ toJson(runner) }}
         SECRETS: ${{ toJson(secrets) }}
         GITHUB: ${{ toJson(github) }}
-        LAL: ${{ secrets.LAL }}
+        ACCESS_DATA: ${{ secrets.ACCESS_DATA }}
       with:
         notebook: "notebooks/contact.ipynb"
         isReport: False
@@ -92,4 +92,4 @@ jobs:
       if: steps.commit.outputs.push == 'true'
       uses: ad-m/github-push-action@master
       with:
-         github_token: ${{ secrets.PAT }}
+         github_token: ${{ secrets.ACCESS_DATA }}
