--- a/.github/workflows/run_notebooks.yml
+++ b/.github/workflows/run_notebooks.yml
@@ -3,7 +3,7 @@ name: Run Notebooks
 on:
   workflow_dispatch:
   workflow_run:
-    workflows: ["Check changes PVT"]
+    workflows: ["Check changes"]
     types:
       - completed
 
